@@ -4,11 +4,12 @@
 # https://gitlab.com/FDOS/devel/pkgdevel
 
 1629122724 ee401aca00dbdcf840e15013d5dfbfb6ac2a40cb9c27f5c4b0c4b9b62892fd95cc96591f4daf53c03faeac7eb7a65f746366199b038e03566cc2d4915bf4b61a SOURCE/PGME/BUILD.BAT
-1629203978 0f05583b009aeec8c88c1d4462eb2662bdf7ecb00da3579aa2c667f1835458dfb00e59c9aed1923213ab77052d55cfab999a4a593d05c6aa933c7440a7d1e7a4 SOURCE/PGME/CHANGES.TXT
+1629302799 b15fed73b1674600bb8ad18943ed36ecbe31f12b0f698056ee08f39e9a9a5b7d58100750914e974855d92d4c36c1e6c2b722fc73e06e0b70cd62a23fa83eeea8 SOURCE/PGME/CHANGES.TXT
 1627934430 f8383a5edc04b6113db78cda2143e29abaab2149c8c7ebbfa7bfe68739323e256fa5f767ce6651169501471fd6982629cb86004ad4e90f16aeb206d56dd4ac1a SOURCE/PGME/CLEAN.BAT
 1628757450 9804d18fef39225e7b2a17139d11dc632c605a89854c438e6508f859bdc4dd448c93e145d76bebd6beb9b109ef6bfcffa66715d40f41d4f890cc673ded3322f1 SOURCE/PGME/CONTRIBUTING.md
 1628966156 d99e3412130cdfe96135fceddcc194bd47daf3a760e55a9c162e88556c6c9dab51fea333ccd0bcdaa5828bf09a86acb7e37f438ec1113eeec1fec089ca952027 SOURCE/PGME/CUSTOM/config/EFNTDSGN.CFG
 1628966136 7cbc96361c3eb8ccab282cd9926667a2b3e3d39bd704fb9633ccb20e056af9ab197a33030cbdab57fa988714aa29d707f03310cc2393d86bbc9f2429dd25dc90 SOURCE/PGME/CUSTOM/config/ETERNITY.CFG
+1629312564 da7e5afc7ccda153f6ce0a9c065eab2a8d3fc45097d0eab4aa1aca77028c19d871afafe3e84ada9193f19a137c8c2ba6cf8e6cf8ac10192cd2a36690bc3743ff SOURCE/PGME/CUSTOM/config/QSCROLL.CFG
 1437956760 fa09bd51584e6bbbbcf239b800dbe1eeafb0e9c42ef9a600641be05cb9d637d635d5eda807a99c8621c7d859c421eabc570df5a2ba6ddf5e9d1ee4f575b67f8b SOURCE/PGME/ESAVER/ATOM.PAS
 1628541541 0529f1941449738daa4ca9ecfa656e4691477a5afaa13d39d71a93af4d90e114af10f45ebe68a7c587482317c829497043ae7f2a92936ea862bff54382748f2e SOURCE/PGME/ESAVER/BLANKER.PAS
 1628546384 71ba705b8b1feba6139a198560b65c2a70ccaa3ce525f43c6e07f77f4be4d97f980078fffb6d31d75bd4f02d607914b70e0daccc05a3ecca7c00343d9e1e67dd SOURCE/PGME/ESAVER/CONWAY.PAS
@@ -58,7 +59,7 @@
 1437956760 43ae8a9986d0145c4c5d88f3f24e83e5fe154b9740af70bc54b647e106e3fd00d009ba1618530e7bddd46b4c70861dc7acd0c08f2ea66522fc40c69e443fa993 SOURCE/PGME/ETOOLS/QKEYS.PAS
 1437956760 fd1846842921f66d033aab37220f2580477f109b9e1f44e82ad3fe0bcd5e3554163cbeacdfe6f6e3638dedaa35dfe9cea727b93986edcc370a240874a4dbff0a SOURCE/PGME/ETOOLS/QNOTHING.PAS
 1629126236 c2604b19ec62c86a891996b0e9168c1ff758c3a72960d4e82c7f64e0c1d5802ebb6679cade9fa1bda5a8b72ba42a76c847193db850be0f031a3a64758dc47a3a SOURCE/PGME/ETOOLS/QRESFILE.PAS
-1629031917 999c5cc6c30c873e1684bca803aa63ac969aa104a1c07334d5746dc06e903faf2f98179b81aa304468d6987f40df166540abe920f8225f70f8794f7dafd7e8ed SOURCE/PGME/ETOOLS/QSCROLL.PAS
+1629312233 4440a2da373fa73295e476065f8337296a0c4545348babd5846952b8cbc2839a6b12e5d492d0393586bec17f777e7fc73955208160c54a5090ab42c60d39d4c0 SOURCE/PGME/ETOOLS/QSCROLL.PAS
 1437956760 9fd938a712c4096e478647911a1af9aed7220e29c2adec800e7f8feb32cf14755c4b663f78cf59f1ddca0b7cede57ee48855773e7fd9149643d9889a8fcdca6a SOURCE/PGME/ETOOLS/RAW2QFNT.PAS
 1437956760 2aef1bf8e3c47802727d0f5067a26036bc90602d1b0951f58163530b80642fa13ade2710ad2f34eff1e375c727866032d9984d24314c6785fd6d371e7cac7254 SOURCE/PGME/ETOOLS/TFONTDES.INC
 1437956760 22f0ca2363d2fb0e8fd740fc1aabc84a24cf3ec2c9c57158c756506d749f74447f4f0c484b9f9fb8741285dd35feccfc51f70a62685abe695b95d29406bc64a8 SOURCE/PGME/ETOOLS/TFONTEDI.INC
@@ -85,7 +86,7 @@
 1628934964 91702ef73bc91a61c88b09da5775ee613f6217f68e20307a4b2adced6e472bba6c134e4213c5f2b151e464130afa51ea2ebd139dceca2904a3dc8ba1bb03847b SOURCE/PGME/QUICKCRT/QCLASS.PAS
 1437956760 77d813295df65810ac783463cde4ebeacdd8ffa68e6745978598c911d7918e56f4188dc95371c955aca3f36f410fc41d8ece1d05edcc58eb7029d911d962a664 SOURCE/PGME/QUICKCRT/QCONTROL.PAS
 1628279510 14c6a0ab29ff88874dc34ca33248977c8bd7de8081d224541b90a499332944af35eff5b618fa447ab0b16b1dc7c6348afef21b73f8a4e8059c4d0bef4ea34540 SOURCE/PGME/QUICKCRT/QCRT.DEF
-1628415902 85cb9ffdcee68de5f5c4f8993c0fa98eab63018b9634e019e75634bdeaf1b052b0305a4b02ada9f089f016926f33f4b50e93322a6699871864a96a3a44d190c9 SOURCE/PGME/QUICKCRT/QCRT.PAS
+1629310443 fee2457731a5a201031d52b359a00eb6083c1a8c27c3a43f502ff514672416c49809edffbdd318dd33445c0b492595f53f6c8eba40b5b9fc0d22c07ce99dc4c4 SOURCE/PGME/QUICKCRT/QCRT.PAS
 1437956760 79759bf3b761254d7cac4f6d5154a4bff26c0b17f8d4a0037d924039724c5b756e2822072446058ddd829c56dcb4717c26c4b46bd800c803c215965770657e9f SOURCE/PGME/QUICKCRT/QDIRCNTL.PAS
 1628788946 c375676499bf5c9bd8fc5856ea8f2e2ee8b38db4209331f9046d6f4c7adc5fd2e5283c20911f5b0872fef52628e4a5d27c2a3dc1da9d02efa288197cfef06eca SOURCE/PGME/QUICKCRT/QDOS.PAS
 1628876051 9a72b0980c9415ec9c2273742c563c0393fc5bf0e29fd1d57ac751539b39a7f0a381d2fdc608957539a9b76e7a2a7fe2f6340fa062f9eca972f6305d8fb7a22e SOURCE/PGME/QUICKCRT/QERRORS.PAS
@@ -147,11 +148,11 @@
 1437956760 4610598f2a85b4dba5865e3d36a7564bf86cae77454d6bca459dd1e9276a611d881081628104c4e7d57d7e90aed417cce454f1978b707a11ab385b1f648f9609 SOURCE/PGME/QUICKCRT/TTOGGLE.INC
 1437956760 2d9a6b0dec1f7119bc30d516221e7763ec659579a794e5bfa0edad07c57a34bb9f84d8819bd3acf558c51b2c208e6ea78790160962ea1e94f45ec3fe2f42fbef SOURCE/PGME/QUICKCRT/TWINDOW.INC
 1493997195 56709ce26d435f5b6759555c556870adf7ec13ee2ae73e40ebf0b57e6f5cd6ec89eba257e2b9ae91182ee8ad85893459e5857c28c8e2417811e8bf1aedcfd86f SOURCE/PGME/README.TXT
-1629297972 d6be20d0da77925225b01e67f75326df8244767d965960587fb494e0212837791471d21411460053c6ac5f0c681cb4a87551f3ee1fdfa58e38ebbeb26fc25eed SOURCE/PGME/README.md
-1629248852 49dd9200a8f840740cb7625ae9748ac0cb2c1d3ccb3a8f5551669dba988504df1dc312a0816d54f1ed427d80f23b8753e58cbe82f02bf59175a6ba2619e051eb SOURCE/PGME/TODO
+1629302790 a8b58a31e0a22304eaa3df52ebb783f097f408932f89029fac41debc43ee65ab6153fa0eae060184d60cd2b1718e635152667b0c131312d2effca3566ee77fbc SOURCE/PGME/README.md
+1629036722 7c8bd24208453385909307e3a8505ffe614706237ba95944bcf921e26df36f4dc0a97025e0bba4c19a97ced438ed89f76c9b0910fa61da93d8ba9dde4297e6dd SOURCE/PGME/TODO
 1628899417 cc2603d9f910bcd6e0f426acbcf284c38da278c51d9a63e2130ff1542461941799de7f18bf0721eb2817002953f64cdfa1267b4aa0928ff7df4884aad7d7226d SOURCE/PGME/VERSION.INC
 1629122724 ee401aca00dbdcf840e15013d5dfbfb6ac2a40cb9c27f5c4b0c4b9b62892fd95cc96591f4daf53c03faeac7eb7a65f746366199b038e03566cc2d4915bf4b61a SOURCE/PGME/BUILD.BAT
-1629203978 0f05583b009aeec8c88c1d4462eb2662bdf7ecb00da3579aa2c667f1835458dfb00e59c9aed1923213ab77052d55cfab999a4a593d05c6aa933c7440a7d1e7a4 SOURCE/PGME/CHANGES.TXT
+1629302799 b15fed73b1674600bb8ad18943ed36ecbe31f12b0f698056ee08f39e9a9a5b7d58100750914e974855d92d4c36c1e6c2b722fc73e06e0b70cd62a23fa83eeea8 SOURCE/PGME/CHANGES.TXT
 1627934430 f8383a5edc04b6113db78cda2143e29abaab2149c8c7ebbfa7bfe68739323e256fa5f767ce6651169501471fd6982629cb86004ad4e90f16aeb206d56dd4ac1a SOURCE/PGME/CLEAN.BAT
 1628757450 9804d18fef39225e7b2a17139d11dc632c605a89854c438e6508f859bdc4dd448c93e145d76bebd6beb9b109ef6bfcffa66715d40f41d4f890cc673ded3322f1 SOURCE/PGME/CONTRIBUTING.md
 1628966156 d99e3412130cdfe96135fceddcc194bd47daf3a760e55a9c162e88556c6c9dab51fea333ccd0bcdaa5828bf09a86acb7e37f438ec1113eeec1fec089ca952027 SOURCE/PGME/CUSTOM/config/EFNTDSGN.CFG
@@ -205,7 +206,7 @@
 1437956760 43ae8a9986d0145c4c5d88f3f24e83e5fe154b9740af70bc54b647e106e3fd00d009ba1618530e7bddd46b4c70861dc7acd0c08f2ea66522fc40c69e443fa993 SOURCE/PGME/ETOOLS/QKEYS.PAS
 1437956760 fd1846842921f66d033aab37220f2580477f109b9e1f44e82ad3fe0bcd5e3554163cbeacdfe6f6e3638dedaa35dfe9cea727b93986edcc370a240874a4dbff0a SOURCE/PGME/ETOOLS/QNOTHING.PAS
 1629126236 c2604b19ec62c86a891996b0e9168c1ff758c3a72960d4e82c7f64e0c1d5802ebb6679cade9fa1bda5a8b72ba42a76c847193db850be0f031a3a64758dc47a3a SOURCE/PGME/ETOOLS/QRESFILE.PAS
-1629031917 999c5cc6c30c873e1684bca803aa63ac969aa104a1c07334d5746dc06e903faf2f98179b81aa304468d6987f40df166540abe920f8225f70f8794f7dafd7e8ed SOURCE/PGME/ETOOLS/QSCROLL.PAS
+1629312233 4440a2da373fa73295e476065f8337296a0c4545348babd5846952b8cbc2839a6b12e5d492d0393586bec17f777e7fc73955208160c54a5090ab42c60d39d4c0 SOURCE/PGME/ETOOLS/QSCROLL.PAS
 1437956760 9fd938a712c4096e478647911a1af9aed7220e29c2adec800e7f8feb32cf14755c4b663f78cf59f1ddca0b7cede57ee48855773e7fd9149643d9889a8fcdca6a SOURCE/PGME/ETOOLS/RAW2QFNT.PAS
 1437956760 2aef1bf8e3c47802727d0f5067a26036bc90602d1b0951f58163530b80642fa13ade2710ad2f34eff1e375c727866032d9984d24314c6785fd6d371e7cac7254 SOURCE/PGME/ETOOLS/TFONTDES.INC
 1437956760 22f0ca2363d2fb0e8fd740fc1aabc84a24cf3ec2c9c57158c756506d749f74447f4f0c484b9f9fb8741285dd35feccfc51f70a62685abe695b95d29406bc64a8 SOURCE/PGME/ETOOLS/TFONTEDI.INC
@@ -232,7 +233,7 @@
 1628934964 91702ef73bc91a61c88b09da5775ee613f6217f68e20307a4b2adced6e472bba6c134e4213c5f2b151e464130afa51ea2ebd139dceca2904a3dc8ba1bb03847b SOURCE/PGME/QUICKCRT/QCLASS.PAS
 1437956760 77d813295df65810ac783463cde4ebeacdd8ffa68e6745978598c911d7918e56f4188dc95371c955aca3f36f410fc41d8ece1d05edcc58eb7029d911d962a664 SOURCE/PGME/QUICKCRT/QCONTROL.PAS
 1628279510 14c6a0ab29ff88874dc34ca33248977c8bd7de8081d224541b90a499332944af35eff5b618fa447ab0b16b1dc7c6348afef21b73f8a4e8059c4d0bef4ea34540 SOURCE/PGME/QUICKCRT/QCRT.DEF
-1628415902 85cb9ffdcee68de5f5c4f8993c0fa98eab63018b9634e019e75634bdeaf1b052b0305a4b02ada9f089f016926f33f4b50e93322a6699871864a96a3a44d190c9 SOURCE/PGME/QUICKCRT/QCRT.PAS
+1629310443 fee2457731a5a201031d52b359a00eb6083c1a8c27c3a43f502ff514672416c49809edffbdd318dd33445c0b492595f53f6c8eba40b5b9fc0d22c07ce99dc4c4 SOURCE/PGME/QUICKCRT/QCRT.PAS
 1437956760 79759bf3b761254d7cac4f6d5154a4bff26c0b17f8d4a0037d924039724c5b756e2822072446058ddd829c56dcb4717c26c4b46bd800c803c215965770657e9f SOURCE/PGME/QUICKCRT/QDIRCNTL.PAS
 1628788946 c375676499bf5c9bd8fc5856ea8f2e2ee8b38db4209331f9046d6f4c7adc5fd2e5283c20911f5b0872fef52628e4a5d27c2a3dc1da9d02efa288197cfef06eca SOURCE/PGME/QUICKCRT/QDOS.PAS
 1628876051 9a72b0980c9415ec9c2273742c563c0393fc5bf0e29fd1d57ac751539b39a7f0a381d2fdc608957539a9b76e7a2a7fe2f6340fa062f9eca972f6305d8fb7a22e SOURCE/PGME/QUICKCRT/QERRORS.PAS
@@ -294,6 +295,6 @@
 1437956760 4610598f2a85b4dba5865e3d36a7564bf86cae77454d6bca459dd1e9276a611d881081628104c4e7d57d7e90aed417cce454f1978b707a11ab385b1f648f9609 SOURCE/PGME/QUICKCRT/TTOGGLE.INC
 1437956760 2d9a6b0dec1f7119bc30d516221e7763ec659579a794e5bfa0edad07c57a34bb9f84d8819bd3acf558c51b2c208e6ea78790160962ea1e94f45ec3fe2f42fbef SOURCE/PGME/QUICKCRT/TWINDOW.INC
 1493997195 56709ce26d435f5b6759555c556870adf7ec13ee2ae73e40ebf0b57e6f5cd6ec89eba257e2b9ae91182ee8ad85893459e5857c28c8e2417811e8bf1aedcfd86f SOURCE/PGME/README.TXT
-1629297972 d6be20d0da77925225b01e67f75326df8244767d965960587fb494e0212837791471d21411460053c6ac5f0c681cb4a87551f3ee1fdfa58e38ebbeb26fc25eed SOURCE/PGME/README.md
-1629248852 49dd9200a8f840740cb7625ae9748ac0cb2c1d3ccb3a8f5551669dba988504df1dc312a0816d54f1ed427d80f23b8753e58cbe82f02bf59175a6ba2619e051eb SOURCE/PGME/TODO
+1629302790 a8b58a31e0a22304eaa3df52ebb783f097f408932f89029fac41debc43ee65ab6153fa0eae060184d60cd2b1718e635152667b0c131312d2effca3566ee77fbc SOURCE/PGME/README.md
+1629036722 7c8bd24208453385909307e3a8505ffe614706237ba95944bcf921e26df36f4dc0a97025e0bba4c19a97ced438ed89f76c9b0910fa61da93d8ba9dde4297e6dd SOURCE/PGME/TODO
 1628899417 cc2603d9f910bcd6e0f426acbcf284c38da278c51d9a63e2130ff1542461941799de7f18bf0721eb2817002953f64cdfa1267b4aa0928ff7df4884aad7d7226d SOURCE/PGME/VERSION.INC
