@@ -1,7 +1,9 @@
 ### The Program Manager Eternity What's Up File
 
-2021
+Next release
 
+    QScroll now remembers Smooth scroll settings.
+    Fixed typing in find box goes behind clock UI bug. (minor, self corrects)
     QResFile (and format) updated to support using UPX on EXE files at any
         time. Now not limited attaching files only after compression.
 
